# RustaceansKenyaWebapp

./: Cargo.toml  LICENSE  README.md
Mockups/: README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/db/: error.rs  init.rs  mod.rs  project_store.rs
backend/src/models/: chapter.rs  contact.rs  event.rs  mod.rs  project.rs  resource.rs
backend/src/routes/: contact_us.rs  homepage.rs  learn_rust.rs  mod.rs  workshop.rs
backend/src/routes/community/: chapters.rs  events.rs  mod.rs  projects.rs
backend/src/routes/partnerships/: handlers.rs  mod.rs  model.rs
backend/src/routes/workshops/: handlers.rs  mod.rs  model.rs
frontend/: Cargo.toml
