[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Rustaceans Kenya"]
description = "The backend code for the web app"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
serde = "1.0.218"
serde_json = "1.0.140"
sqlx = "0.8.3"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = "0.6.2"