[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Rustaceans Kenya"]
description = "The backend code for the web app"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
bincode = { version = "2.0.1", features = ["derive", "serde"] }
http = "1.3.1"
redb = "2.4.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
validator = { version = "0.20.0", features = ["derive"] }
